# rust_drop

./: Cargo.toml  README.md
src/: main.rs
